feat(jdbc): 添加Lambda查询支持和SQL结果映射优化
- 在ReportQueryExecutor中添加查询参数验证
- 实现SqlResultMetadata缓存机制提升反射性能
- 添加Lambda条件构建支持包括查询、更新、删除操作
- 新增LambdaPageParam支持类型安全的分页参数构建
- 扩展Repository类提供lambdaQuery、lambdaUpdate、lambdaDelete等方法
- 实现existsById和exists方法增强数据存在性检查功能
- 添加批量删除和按字段更新的便捷方法
- 优化SqlResultRowMapper使用元数据缓存减少重复反射扫描